--- a/backup/index.html
+++ b/backup/index.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="shuttlecockPrice">Shuttlecock Price (per piece)</label>
+                        <label for="shuttlecockPrice">Shuttlecock Price</label>
                         <div class="input-wrapper">
                             <span class="currency">₫</span>
                             <input type="number" id="shuttlecockPrice" placeholder="Enter shuttlecock price" min="0">
